Project update Changed gradle version Updated tests Removed usage of Pair class Vector -> Tuple