@@ -1,7 +1,7 @@
 package com.vjasal.aoc2018.day03;
 
 import com.vjasal.util.CollectionUtil;
-import com.vjasal.util.vectors.Vector2;
+import com.vjasal.util.vectors.Tuple2;
 
 import java.util.HashMap;
 import java.util.List;
@@ -9,14 +9,13 @@ import java.util.Map;
 import java.util.logging.Logger;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 public class Fabric {
 
     private static final Logger logger = Logger.getLogger(Fabric.class.getName());
     private static final Pattern pattern = Pattern.compile("^#(\\d+) @ (\\d+),(\\d+): (\\d+)x(\\d+)$");
 
-    private final Map<Vector2<Integer, Integer>, List<Integer>> map = new HashMap<>();
+    private final Map<Tuple2<Integer, Integer>, List<Integer>> map = new HashMap<>();
     private final Map<Integer, Boolean> overlaps = new HashMap<>();
 
     public Fabric(String input) {
@@ -41,7 +40,7 @@ public class Fabric {
                 .filter(Map.Entry::getValue)
                 .mapToInt(Map.Entry::getKey)
                 .boxed()
-                .collect(Collectors.toList());
+                .toList();
 
         if (result.size() != 1) throw new IllegalStateException("");
         return result.get(0);
@@ -51,7 +50,7 @@ public class Fabric {
         overlaps.put(id, true);
         for (int j = y; j < y + h; j++) {
             for (int i = x; i < x + w; i++) {
-                Vector2<Integer, Integer> v = new Vector2<>(i, j);
+                Tuple2<Integer, Integer> v = new Tuple2<>(i, j);
                 if (map.containsKey(v)) {
                     map.get(v).add(id);
                     for (Integer overlappingId : map.get(v)) {
